Moved tests in a tests folder

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # Pytest configuration file
-testpaths = .
+testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
